<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_movie"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageButton
        android:id="@+id/btn_bck_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back_arrow"/>
    <ImageButton
        android:id="@+id/btn_share_movie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/button_share"
        android:src="@drawable/ic_baseline_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:id="@+id/tv_title_movie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/title"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@id/btn_share_movie"
        app:layout_constraintStart_toEndOf="@id/btn_bck_movie"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageView
        android:id="@+id/img_poster_bgr"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_movie"
        app:srcCompat="@android:color/white"
        android:scaleType="fitXY"
        android:contentDescription="@string/image_poster"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_movie"
        app:srcCompat="@drawable/bgr"
        android:scaleType="fitXY"
        android:contentDescription="@string/image_poster"/>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar_movie"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:id="@+id/img_poster_movie"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@color/colorAccent"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="@string/image_poster"/>
    </androidx.cardview.widget.CardView>
    <ImageView
        android:id="@+id/img_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:src="@drawable/ic_baseline_duration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_poster_bgr"
        android:contentDescription="@string/duration" />
    <TextView
        android:id="@+id/tv_rilis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/rilis"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@id/img_duration"
        app:layout_constraintTop_toBottomOf="@id/img_poster_bgr"/>
    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/rilis"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/img_duration"
        app:layout_constraintTop_toBottomOf="@id/tv_rilis"/>
    <ImageView
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/tv_rilis"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/line"/>
    <RatingBar
        android:id="@+id/rt_userScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="10"
        android:layout_marginStart="16dp"
        style="@style/Widget.AppCompat.RatingBar.Small"
        app:layout_constraintTop_toBottomOf="@id/line"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/tv_genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        tools:text="@string/genre"
        android:textSize="12sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        app:layout_constraintStart_toEndOf="@id/rt_userScore"
        app:layout_constraintTop_toBottomOf="@id/line"/>
    <TextView
        android:id="@+id/tv_tagline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:textStyle="italic"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/rt_userScore"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/tagline"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tagline"
        android:background="@color/grey"/>
    <TextView
        android:id="@+id/label_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summaries"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_tagline"
        android:layout_marginStart="20dp"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"/>
    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_desc"
        tools:text="@string/description"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/favorite"
        android:layout_marginEnd="16dp"
        app:srcCompat="@drawable/ic_baseline_favorite_border"
        android:background="@android:color/white"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <ProgressBar
        android:id="@+id/progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        tools:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>