...
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ImageButton
        android:id="@+id/btn_bck_tvshow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back_arrow"/>
...
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/label_desc"
        tools:text="@string/description"/>
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_favoriteTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/favorite"
        android:layout_marginEnd="16dp"
        app:srcCompat="@drawable/ic_baseline_favorite_border"
        android:background="@android:color/white"
...
